# test_rest_api

./: .gitignore  .pre-commit-config.yaml  README.md  data.sql  docker-compose.yaml  pyproject.toml
app/: .env.example  Dockerfile  alembic.ini  main.py  setup_app.py  setup_db.py
app/api/: __init__.py
app/api/dependencies/: security.py  services.py
app/api/v1/: __init__.py  activities.py  auth.py  buildings.py  organizations.py
app/core/: config.py
app/core/auth/: jwt.py  utils.py
app/core/models/: __init__.py  activity.py  base.py  building.py  db_helper.py  organization.py  phone.py  user.py
app/core/models/mixins/: __init__.py  created_at_mixin.py  updated_at_mixin.py  uuid_pk_mixin.py
app/core/schemas/: activity.py  auth.py  building.py  organization.py  phone_number.py  user.py
app/crud/: activity.py  base.py  building.py  organization.py  phone.py
app/migrations/versions/: 2025_01_15_0037-c240d59dc133_create_buildings_table.py  2025_01_15_0048-3574af03b5c9_create_activities_table.py  2025_01_15_0051-b4c63086244f_create_organizationss_table.py  2025_01_15_0053-aeeac8d8ec11_create_phones_table.py  2025_01_15_0230-788ac66ff6ba_change_number_type_to_string_in_.py  2025_01_15_1528-b2d9cd9db020_create_users_table.py
app/services/: activity.py  base.py  building.py  organization.py  phone.py  user.py
app/utils/: case_converters.py  init_app.py
scripts/: entrypoint.sh
